hide map on mobile, fix feedback button style

--- a/magda-web-client/src/Components/Dataset/DatasetSuggestForm.scss
+++ b/magda-web-client/src/Components/Dataset/DatasetSuggestForm.scss
@@ -1,8 +1,10 @@
+@import "../../variables";
+
 .ask-dataset-form {
     padding: 10px;
     border: solid;
-    border-color: rgba(189, 189, 189, 0.3);
-    background-color: #f7f7f7;
+    border-color: $AU-color-foreground-focus;
+    background-color: $AU-colordark-foreground-action;
     overflow: -webkit-paged-y;
     position: relative;
 }
@@ -18,8 +20,9 @@
     }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: $small) {
     .dataset-correspondence-container {
         display: inline-block;
+        margin-top: 1rem;
     }
 }
