--- a/magda-web-client/src/UI/DataPreviewMapOpenInNationalMapButton.scss
+++ b/magda-web-client/src/UI/DataPreviewMapOpenInNationalMapButton.scss
@@ -1,10 +1,12 @@
 @import "../variables";
 .data-preview-map {
     .open-in-national-map-button {
+        @media (min-width: $medium) {
+            border: 1px solid rgba(73, 73, 73, 0.05);
+        }
         position: relative;
         height: 40px;
         width: 202px;
-        border: 1px solid rgba(73, 73, 73, 0.05);
         border-radius: 2px;
         background-color: $AU-color-background;
     }
